# Copyright (c) 2017 Vittorio Romeo
# License: Academic Free License ("AFL") v. 3.0
# AFL License page: http://opensource.org/licenses/AFL-3.0
# http://vittorioromeo.info | vittorio.romeo@outlook.com

add_executable(example_error_handling "error_handling.cpp")
add_executable(example_expression "expression.cpp")

