# Copyright (c) 2017 Vittorio Romeo
# MIT License |  https://opensource.org/licenses/MIT
# http://vittorioromeo.info | vittorio.romeo@outlook.com

add_executable(example_error_handling "error_handling.cpp")
add_executable(example_expression "expression.cpp")
add_executable(example_optional_cat "optional_cat.cpp")

